// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container /> should adopt the "maxWidth" prop 1`] = `
.c0 {
  z-index: 10;
  -webkit-filter: none;
  filter: none;
  opacity: 1;
  -webkit-animation-delay: 0ms;
  animation-delay: 0ms;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@media (min-height:100%) {
  .c0 {
    -webkit-filter: drop-shadow(0 0 5px grey);
    filter: drop-shadow(0 0 5px grey);
  }
}

@media (min-width:100px) {
  .c0 {
    width: 100px;
  }
}

<div
  className="c0"
/>
`;

exports[`<Container /> should adopt the "showArrowBreakpoint" prop 1`] = `
.c0 {
  z-index: 10;
  -webkit-filter: none;
  filter: none;
  opacity: 1;
  -webkit-animation-delay: 0ms;
  animation-delay: 0ms;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@media (min-height:1rem) {
  .c0 {
    -webkit-filter: drop-shadow(0 0 5px grey);
    filter: drop-shadow(0 0 5px grey);
  }
}

@media (min-width:unset) {
  .c0 {
    width: unset;
  }
}

<div
  className="c0"
/>
`;

exports[`<Container /> should render and match the snapshot 1`] = `
.c0 {
  z-index: 10;
  -webkit-filter: none;
  filter: none;
  opacity: 1;
  -webkit-animation-delay: 0ms;
  animation-delay: 0ms;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@media (min-height:100%) {
  .c0 {
    -webkit-filter: drop-shadow(0 0 5px grey);
    filter: drop-shadow(0 0 5px grey);
  }
}

@media (min-width:unset) {
  .c0 {
    width: unset;
  }
}

<div
  className="c0"
/>
`;
